# emsqrt

./: Cargo.toml  README.md
crates/emsqrt-cli/: Cargo.toml
crates/emsqrt-cli/src/: main.rs
crates/emsqrt-core/: Cargo.toml
crates/emsqrt-core/src/: arrow.rs  error.rs  expr.rs  lib.rs  schema.rs  stats.rs
crates/emsqrt-exec/: Cargo.toml
crates/emsqrt-exec/src/: runtime.rs  scheduler.rs
crates/emsqrt-io/: Cargo.toml
crates/emsqrt-io/src/: arrow_convert.rs  error.rs  lib.rs
crates/emsqrt-io/src/readers/: csv.rs  jsonl.rs  parquet.rs
crates/emsqrt-io/src/writers/: csv.rs  parquet.rs
crates/emsqrt-mem/src/: error.rs
crates/emsqrt-operators/: Cargo.toml
crates/emsqrt-operators/src/: agregate.rs  filter.rs  project.rs  registry.rs  traits.rs
crates/emsqrt-operators/src/join/: hash.rs  merge.rs
crates/emsqrt-planner/src/: cost.rs  lower.rs  rules.rs
crates/emsqrt-planner/src/dsl/: yaml.rs
crates/emsqrt-te/src/: tree_eval.rs
crates/emsqrt-tests/: Cargo.toml
crates/emsqrt-tests/src/: lib.rs
examples/: README.md  aggregate_pipeline.yaml  join_pipeline.yaml  parquet_pipeline.yaml  parquet_scan_pipeline.yaml  simple_pipeline.yaml
scripts/: run_all_tests.sh
tests/: arrow_conversion_tests.rs  cli_validation_tests.rs  cli_yaml_tests.rs  column_stats_tests.rs  cost_estimation_tests.rs  e2e_smoke.rs  error_handling_tests.rs  error_recovery_tests.rs  expression_evaluation_tests.rs  expression_tests.rs  filter_expression_tests.rs  grace_hash_join_tests.rs  integration_tests.rs  merge_join_tests.rs  parquet_io_tests.rs  spill_manager_tests.rs  test_data_gen.rs
