[package]
name = "emsqrt-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Command-line interface for EM-√ engine"
repository = "https://github.com/logannye/emsqrt"

[[bin]]
name = "emsqrt"
path = "src/main.rs"

[dependencies]
emsqrt-core = { path = "../emsqrt-core", package = "emsqrt-core" }
emsqrt-planner = { path = "../emsqrt-planner", package = "emsqrt-planner" }
emsqrt-te = { path = "../emsqrt-te", package = "emsqrt-te" }
emsqrt-exec = { path = "../emsqrt-exec", package = "emsqrt-exec" }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"

