[package]
name = "emsqrt-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core types, IDs, configs, DAG nodes, manifests, and hashing for the EM-√ engine"
repository = "https://github.com/logannye/emsqrt"
readme = "README.md"

[lib]
name = "emsqrt_core"
path = "src/lib.rs"

[features]
# Arrow integration for columnar processing
arrow = ["dep:arrow-array", "dep:arrow-schema", "dep:arrow-data"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
# Arrow dependencies (feature-gated)
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
arrow-data = { version = "53", optional = true }
# Keep deps minimal; no async/runtime/IO in core.

[dev-dependencies]
serde_json = "1"
