[package]
name = "emsqrt-exec"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Runtime, scheduler, and deterministic manifests for the EM-√ engine"

[lib]
name = "emsqrt_exec"
path = "src/lib.rs"

[features]
# Enable internal chaos hooks (panic/latency injection).
failpoints = []
tracing = ["dep:tracing"]

[dependencies]
emsqrt-core       = { path = "../emsqrt-core",       package = "emsqrt-core" }
emsqrt-te         = { path = "../emsqrt-te",         package = "emsqrt-te" }
emsqrt-mem        = { path = "../emsqrt-mem",        package = "emsqrt-mem" }
emsqrt-io         = { path = "../emsqrt-io",         package = "emsqrt-io" }
emsqrt-operators  = { path = "../emsqrt-operators",  package = "emsqrt-operators" }
emsqrt-planner    = { path = "../emsqrt-planner",    package = "emsqrt-planner" }

thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
tracing = { version = "0.1", optional = true }
